Closes #4 - Cria títulos e labels

--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Exemplo code Git</title>
 </head>
 <body>
-
+    <header>
+        <h1>Exemplo code com Git</h1>
+    </header>
+    <main>
+        <h2>Formulário de cadastro</h2>
+        <form>
+            <label for="nome">Nome:</label>
+            <label for="email">Email:</label>
+        </form>
+    </main>
 </body>
 </html>
