Adicionando links para css, javascript e jquary

--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+        <meta charset="UTF-8">
+        <!-- Link para bootstrap -->
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+        <!-- Link para jQuery library -->
+        <link rel="stylesheet" type="text/css" href="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+        <!-- Link para o scripr js principal -->
+        <link rel="stylesheet" type="text/css" href="main.js">
+        <title>Title</title>
 </head>
 <body>
 
