--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <title>Title</title>
 </head>
 <body>
-
+    <section id="formulario">
+        <form>
+            <h2>Formulário de Cadastro</h2>
+            <div class="form-group">
+                <label for="txt-nome">Nome</label>
+                <input type="text" name="txt-nome" placeholder="Informe seu nome..." id="txt-nome" />
+            </div>
+            <div class="form-group">
+                <label for="txt-email">Nome</label>
+                <input type="email" name="txt-email" placeholder="Informe seu email..." id="txt-email" />
+            </div>
+            <div class="form-group">
+                <button class="btn btn-danger" type="submit" id="btn-gravar">Gravar</button>
+                <button class="btn btn-default" type="submit" id="btn-limpar">Limpar</button>
+            </div>
+        </form>
 </body>
 </html>
