--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
         <!-- Link para jQuery library -->
-        <link rel="stylesheet" type="text/css" href="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+        <link rel="stylesheet"  href="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
         <!-- Link para o scripr js principal -->
-        <link rel="stylesheet" type="text/css" href="main.js">
+        <link rel="stylesheet" href="main.js">
         <title>Title</title>
 </head>
 <body>
