--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </header>
     <main>
         <h2>Formulário de cadastro</h2>
-        <form>
+        <form action="return false;">
             <h2>Formulário de Cadastro</h2>
             <div class="form-group">
                 <label for="txt-nome">Nome</label>
@@ -22,7 +22,7 @@
             </div>
             <div class="form-group">
                 <button class="btn btn-danger" type="submit" id="btn-gravar">Gravar</button>
-                <button class="btn btn-default" type="submit" id="btn-limpar">Limpar</button>
+                <button class="btn btn-default" type="submit" onclick="limpar();" id="btn-limpar">Limpar</button>
             </div>
         </form>
     </main>
