--- a/index.html
+++ b/index.html
@@ -18,22 +18,27 @@
         <h1>Exemplo code com Git</h1>
     </header>
     <main>
-        <h2>Formulário de cadastro</h2>
-        <form action="return false;">
-            <h2>Formulário de Cadastro</h2>
-            <div class="form-group">
-                <label for="txt-nome">Nome</label>
-                <input type="text" name="txt-nome" placeholder="Informe seu nome..." id="txt-nome" />
+        <div class="container>
+            <div class="row">
+                <div class="col-md-6 col-md">
+                    <h2>Formulário de cadastro</h2>
+                    <form onsubmit="return false;">
+                        <div class="form-group">
+                            <label for="txt-nome">Nome</label>
+                            <input type="text" class="form-control" name="txt-nome" placeholder="Informe seu nome..." id="txt-nome" />
+                        </div>
+                        <div class="form-group">
+                            <label for="txt-email">Nome</label>
+                            <input type="email" class="form-control" name="txt-email" placeholder="Informe seu email..." id="txt-email" />
+                        </div>
+                        <div class="form-group">
+                            <button class="btn btn-danger" type="submit" onclick="showSavedUser();" id="btn-gravar">Gravar</button>
+                            <button class="btn btn-default" type="submit" onclick="limpar();" id="btn-limpar">Limpar</button>
+                        </div>
+                    </form>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="txt-email">Nome</label>
-                <input type="email" name="txt-email" placeholder="Informe seu email..." id="txt-email" />
-            </div>
-            <div class="form-group">
-                <button class="btn btn-danger" type="submit" id="btn-gravar">Gravar</button>
-                <button class="btn btn-default" type="submit" onclick="limpar();" id="btn-limpar">Limpar</button>
-            </div>
-        </form>
+        </div>
     </main>
 </body>
 </html>
