--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Exemplo code Git</title>
@@ -10,7 +10,7 @@
         <!-- Link para jQuery library -->
         <link rel="stylesheet"  href="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
         <!-- Link para o scripr js principal -->
-        <link rel="stylesheet" href="main.js">
+        <script src="main.js"></script>
         <title>Title</title>
 </head>
 <body>
