--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta charset="UTF-8">
         <!-- Link para bootstrap -->
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <!-- Link para jQuery library -->
-        <link rel="stylesheet"  href="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <!-- Link para o scripr js principal -->
         <script src="main.js"></script>
         <title>Title</title>
