--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                 </div>
             </div>
         </div>
+        <div class="container">
+            <table class="table table-striped">
+            </table>
+        </div>
     </main>
 </body>
 </html>
