--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <div class="container>
             <div class="row">
-                <div class="col-md-6 col-md">
+                <div class="col-md-6">
                     <h2>Formulário de cadastro</h2>
                     <form onsubmit="return false;">
                         <div class="form-group">
@@ -36,6 +36,44 @@
                             <button class="btn btn-default" type="submit" onclick="limpar();" id="btn-limpar">Limpar</button>
                         </div>
                     </form>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="table responsive">
+
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Id</th>
+                                    <th>Nome</th>
+                                    <th>Email</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Fernando</td>
+                                    <td>fe@gmail.com</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>Fábio</td>
+                                    <td>fa@gmail.com</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>Marco</td>
+                                    <td>ma@gmail.com</td>
+                                </tr>
+                                <tr>
+                                    <td>4</td>
+                                    <td>Marco</td>
+                                    <td>ca@gmail.com</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
