--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <!-- Link para o scripr js principal -->
         <script src="main.js"></script>
+
+
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/bs-3.3.5/jq-2.1.4,dt-1.10.8/datatables.min.css"/>
+
+        <script type="text/javascript" src="https://cdn.datatables.net/r/bs-3.3.5/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
+        <script type="text/javascript" charset="utf-8">
+			$(document).ready(function() {
+				$('#tabela').DataTable();
+			} );
+		</script>
         <title>Title</title>
 </head>
 <body>
@@ -38,11 +48,12 @@
                     </form>
                 </div>
             </div>
+            <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="table responsive">
 
-                        <table class="table">
+                        <table class="table dataTable" id="tabela">
                             <thead>
                                 <tr>
                                     <th>Id</th>
@@ -77,10 +88,18 @@
                 </div>
             </div>
         </div>
+        </div>
         <div class="container">
             <table class="table table-striped">
             </table>
         </div>
     </main>
+    <script type="text/javascript">
+    $('#tabela')
+		.removeClass( 'display' )
+		.addClass('table table-striped table-bordered');
+    </script>
 </body>
+
+ul>li.item$@3*5
 </html>
